<resources>
    <string name="app_name">Snake</string>
    <string name="continue_button_main">Continue</string>
    <string name="new_game_button_main">New Game</string>
    <string name="configurations_button_main">Configurations</string>
    <string name="easy_radius_config">Easy 🥱🥱</string>
    <string name="normal_radius_config">Normal 😎🧐</string>
    <string name="hard_radius_config">Hard 👿👹</string>
    <string name="small_table_config">Small Table 🤏🐜</string>
    <string name="big_table_config">Big Table 👐🐋</string>
    <string name="ConfigConfirmButton">VALID ✅</string>
    <string name="ConfigCancelButton">CANCEL ❌</string>
    <string name="up">⬆</string>
    <string name="left">⬅</string>
    <string name="down">⬇</string>
    <string name="right">➡</string>
    <string name="score">Score:</string>
    <string name="pause">PAUSE</string>
    <string name="final_score">Final Score</string>
    <string name="finishButton">Finish Game</string>
    <string name="your_name">your name</string>
    <string name="snake_draw">snake</string>
    <string name="high_score">HIGH SCORE</string>
</resources>